Add transaction page

--- a/views/bidding.ejs
+++ b/views/bidding.ejs
@@ -55,7 +55,7 @@
                 <td>5 Bidders</td>
                 <td>
                     <form action="/">
-                        <input type="text" name="bidAmount"><br><input type="submit" value="Place Bid">
+                        <input type="text" name="bidAmount"><input type="submit" value="Place Bid">
                     </form>
                 </td>
             </tr>
@@ -66,7 +66,7 @@
                 <td>$5.00</td>
                 <td>2 Seats</td>
                 <td>5 Bidders</td>
-                <td><form action="/"><input type="text" name="bidAmount"><br><input type="submit" value="Place Bid"></form></td>
+                <td><form action="/"><input type="text" name="bidAmount"><input type="submit" value="Place Bid"></form></td>
             </tr>
             <tr>
                 <td>John Smith</td>
@@ -75,7 +75,7 @@
                 <td>$5.00</td>
                 <td>2 Seats</td>
                 <td>5 Bidders</td>
-                <td><form action="/"><input type="text" name="bidAmount"><br><input type="submit" value="Place Bid"></form></td>
+                <td><form action="/"><input type="text" name="bidAmount"><input type="submit" value="Place Bid"></form></td>
             </tr>
         </tbody>
     </table>
