--- a/views/rewards.ejs
+++ b/views/rewards.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- Page Title -->
-    <title>Home Page</title>
+    <title>Rewards</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
     <!-- CSS for Styling -->
@@ -14,24 +14,87 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Welcome to SequelRideSharing!</h1>
+    <h1>Claim your rewards! Total spendable points: 70</h1>
     <br>
-    <h2>You may wish to visit these pages:</h2>
+    <h2>My discount codes</h2>
     <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">Page</th>
-                <th scope="col">Link</th>
+                <th scope="col">Discount Code</th>
+                <th scope="col">Discount Amount</th>
+                <th scope="col">Expiry Date</th>
+                <th scope="col">Redeemed</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>ManageCars</td>
-                <td><a href="/manage-cars">/manage-cars</a></td>
+                <td>D000003</td>
+                <td>$3.00</td>
+                <td>08/01/2020</td>
+                <td><p style="color:green">Available</p></td>
+            </tr>
+            <tr>
+                <td>D000002</td>
+                <td>$2.00</td>
+                <td>12/12/2019</td>
+                <td><p style="color:grey">Redeemed</p></td>
+            </tr>
+            <tr>
+                <td>D000001</td>
+                <td>$1.00</td>
+                <td>08/10/2019</td>
+                <td><p style="color:red">Expired</p></td>
+            </tr>
+        </tbody>
+    </table>
+    <h2>Purchase discount codes</h2>
+    <table class="table">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Discount Amount</th>
+                <th scope="col">Cost</th>
+                <th scope="col">Purchase</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>$1.00</td>
+                <td>20 Points</td>
+                <td><button>Purchase</button></td>
+            </tr>
+            <tr>
+                <td>$2.00</td>
+                <td>40 Points</td>
+                <td><button>Purchase</button></td>
+            </tr>
+            <tr>
+                <td>$3.00</td>
+                <td>60 Points</td>
+                <td><button>Purchase</button></td>
+            </tr>
+            <tr>
+                <td>$4.00</td>
+                <td>80 Points</td>
+                <td><button disabled>Insufficient Points</button></td>
+            </tr>
+            <tr>
+                <td>$5.00</td>
+                <td>100 Points</td>
+                <td><button disabled>Insufficient Points</button></td>
+            </tr>
+            <tr>
+                <td>$8.00</td>
+                <td>120 Points</td>
+                <td><button disabled>Insufficient Points</button></td>
             </tr>
         </tbody>
     </table>
 </body>
 </html>
-
-<!--  -->
+<!-- INSERT INTO Discount VALUES ('D000001', 20, 1);
+    INSERT INTO Discount VALUES ('D000002', 40, 2);
+    INSERT INTO Discount VALUES ('D000003', 60, 3);
+    INSERT INTO Discount VALUES ('D000004', 80, 4);
+    INSERT INTO Discount VALUES ('D000005', 100, 5);
+    INSERT INTO Discount VALUES ('D000006', 120, 8); -->
+    <!-- GOT 2 PER TYPE OF PERSON. GOT DISCOUNT CODES I OWN AND DISCOUNT CODES I CAN BUY WITH TOTAL NUM SPENDABLE REWARD POINTS  -->
