Add navbar and register page

--- a/views/bidding.ejs
+++ b/views/bidding.ejs
@@ -3,6 +3,8 @@
 <head>
     <!-- Page Title -->
     <title>Bidding</title>
+    <% include partial/navbar.ejs %>
+    <br>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
     <!-- CSS for Styling -->
