--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -5,6 +5,8 @@
 <head>
     <!-- Page Title -->
     <title>Transaction</title>
+    <% include partial/navbar.ejs %>
+    <br>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     
     <!-- CSS for Styling -->
