--- a/views/register.ejs
+++ b/views/register.ejs
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Register</title>
+        <% include partial/navbar.ejs %>
+        <br>
         <% include partial/header.ejs %>
     </head>
     <body>
