--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,7 +14,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td><a href="/userprofile">Update my personal information</a></td></tr>
+            <tr><td><a href="/updateprofile">Update my personal information</a></td></tr>
             <tr><td><a href="/logout">Logout</a></td></tr>
         </tbody>
     </table>
