drivers and passengers can self register
closes #10
there's no UI feedback for now but I can hack something together

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,6 +17,24 @@
             <tr><td><a href="/updateprofile">Update my personal information</a></td></tr>
             <tr><td><a href="/logout">Logout</a></td></tr>
         </tbody>
+
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Passenger portal</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td><a href="/unlockpassenger">Unlock passenger features</a></td></tr>
+        </tbody>
+
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">Driver portal</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td><a href="/unlockdriver">Unlock driver features</a></td></tr>
+        </tbody>
     </table>
 </body>
 </html>
