omg the user actually gets feedback for errors

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Register</h1>
+        <% include partial/msg.ejs %>
         <form id="html_form" action="register" role="form" method="post">
             <div class="form-group">
                 <label for="username">Username</label>
