--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hi <%= username %></h1>
+    <% include partial/msg.ejs %>
     <table class="table">
         <thead class="thead-light">
             <tr>
