--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Login</h1>
+        <% include partial/msg.ejs %>
         <form id="html_form" action="login" role="form" method="post">
             <div class="form-group">
                 <label for="username">Username</label>
