--- a/views/updateprofile.ejs
+++ b/views/updateprofile.ejs
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>My profile</h1>
+        <% include partial/msg.ejs %>
         <form action="/updateprofile" role="form" method="post">
             <div class="form-group">
                 <label for="username">Username</label>
