drivers can add cars now

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -35,6 +35,7 @@
         </thead>
         <tbody>
             <tr><td><a href="/unlockdriver">Unlock driver features</a></td></tr>
+            <tr><td><a href="/mycars">Manage my cars</a></td></tr>
         </tbody>
     </table>
 </body>
