--- a/views/mycars.ejs
+++ b/views/mycars.ejs
@@ -14,6 +14,7 @@
 </script>
 
     <h1>My cars</h1>
+    <% include partial/msg.ejs %>
     <table class="table">
         <thead class="thead-light">
             <tr>
@@ -88,18 +89,18 @@
     <h2>Add a car</h2>
     <form action="/addcar" role="form" method="post">
         <div class="form-group">
-            <label>Plate number <input type="text" class="form-control" name="plate_num" placeholder="SBC1234Z"></label>
+            <label>Plate number (just the numbers for now) <input type="number" min="1" max="9999" class="form-control" name="plate_num" placeholder="1234"></label>
         </div>
         <div class="form-group">
-            <label>Model <input type="text" class="form-control" name="model" placeholder="Honda Prius"></label>
-        </div>
-        <div class="form-group">
-            <label>COE Expiry (1 year of remaining validity needed)
-                <input type="date" class="form-control" name="edate"></label>
+            <label>Model (in 7 chars) <input type="text" class="form-control" name="model" placeholder="GTR"></label>
         </div>
         <div class="form-group">
             <label>How many seats?
                 <input type="number" min="1" max="100" class="form-control" name="num_seats"></label>
+        </div>
+        <div class="form-group">
+            <label>COE Expiry (1 year of remaining validity needed)
+                <input type="date" class="form-control" name="edate"></label>
         </div>
         <input type="submit" value="Add Car">
     </form>
