fixup 5864430 by killing /unlockpassenger
killed because a trigger is doing it

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -25,7 +25,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr><td><a href="/unlockpassenger">Unlock passenger features</a></td></tr>
+            <tr><td><a href="/">to make</a></td></tr>
         </tbody>
 
         <thead class="thead-light">
