--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,16 +7,20 @@
     <body>
         <h1>Login</h1>
         <% include partial/msg.ejs %>
-        <form id="html_form" action="login" role="form" method="post">
+        <form action="/login" class="form" role="form" method="post">
             <div class="form-group">
-                <label for="username">Username</label>
+                <label for="username">Username
                 <input type="text" class="form-control" id="username" name="username" aria-describedby="usernameHelp" placeholder="Enter your username">
+                </label>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password
                 <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password">
+                </label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
+        <br>
+        <a href="/">Go back</a> | <a href="/register">Make an account</a>
     </body>
 </html>
