--- a/views/editcar.ejs
+++ b/views/editcar.ejs
@@ -13,7 +13,7 @@
                 <label>Model (in 7 chars) <input type="text" class="form-control" name="model" value="<%= row.model %>"></label>
             </div>
             <div class="form-group">
-                <label>How many seats?
+                <label>How many passenger seats?
                     <input type="number" min="1" max="100" class="form-control" name="num_seats" value="<%= row.num_seats %>"></label>
             </div>
             <div class="form-group">
