--- a/views/mycars.ejs
+++ b/views/mycars.ejs
@@ -13,7 +13,7 @@
             <tr>
                 <th scope="col">Plate No.</th>
                 <th scope="col">Model</th>
-                <th scope="col">Seats</th>
+                <th scope="col">Passenger seats</th>
                 <th scope="col">COE Expires on</th>
                 <!-- Edit/Delete -->
                 <th scope="col">Action</th>
@@ -43,7 +43,7 @@
             <label>Model (in 7 chars) <input type="text" class="form-control" name="model" placeholder="GTR"></label>
         </div>
         <div class="form-group">
-            <label>How many seats?
+            <label>How many passenger seats?
                 <input type="number" min="1" max="100" class="form-control" name="num_seats"></label>
         </div>
         <div class="form-group">
