--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,34 +8,60 @@
     <% include partial/navbar.ejs %>
     <h1>Hi <%= username %></h1>
     <% include partial/msg.ejs %>
+    <h2>My account</h2>
     <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">User</th>
+                <th scope="col">Action</th>
+                <th scope="col">Details</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td><a href="/updateprofile">Update my personal information</a></td></tr>
-            <tr><td><a href="/logout">Logout</a></td></tr>
+            <tr>
+                <td><a href="/updateprofile">Update profile</a></td>
+                <td>Update your personal information</td>
+            </tr>
+            <tr><td><a href="/logout">Logout</a></td><td></td></tr>
         </tbody>
+    </table>
 
+    <h2>Passenger</h2>
+    <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">Passenger portal</th>
+                <th scope="col">Action</th>
+                <th scope="col">Details</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td><a href="/">to make</a></td></tr>
+            <tr>
+                <td><a href="/">view rides</a></td>
+                <td>find open rides</td>
+            </tr>
         </tbody>
+    </table>
 
+    <h2>Driver</h2>
+    <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">Driver portal</th>
+                <th scope="col">Action</th>
+                <th scope="col">Details</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td><a href="/unlockdriver">Unlock driver features</a></td></tr>
-            <tr><td><a href="/mycars">Manage my cars</a></td></tr>
+            <tr>
+                <td><a href="/unlockdriver">Unlock driver features</a></td>
+                <td>Start driving for us</td>
+            </tr>
+            <tr>
+                <td><a href="/mycars">Manage my cars</a></td>
+                <td>Register, update and de-register cars with us</td>
+            </tr>
+            <tr>
+                <td><a href="/newride">New ride</a></td>
+                <td>Publish a new ride that passengers can register for</td>
+            </tr>
         </tbody>
     </table>
 </body>
