drivers can add rides

--- a/views/editcar.ejs
+++ b/views/editcar.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Update my profile</title>
+        <title>Editing car <%= row.plate_num %></title>
         <% include partial/header.ejs %>
     </head>
     <body>
