preliminary ride viewing

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -35,8 +35,8 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="/">view rides</a></td>
-                <td>find open rides</td>
+                <td><a href="/rides">Find rides</a></td>
+                <td>Find open rides</td>
             </tr>
         </tbody>
     </table>
@@ -56,11 +56,8 @@
             </tr>
             <tr>
                 <td><a href="/mycars">Manage my cars</a></td>
-                <td>Register, update and de-register cars with us</td>
-            </tr>
-            <tr>
-                <td><a href="/newride">New ride</a></td>
-                <td>Publish a new ride that passengers can register for</td>
+                <td>Register, update and de-register cars with us,
+                you can also publish new rides that passengers can sign up for.</td>
             </tr>
         </tbody>
     </table>
