get the damn ride reference working

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -57,7 +57,11 @@
             <tr>
                 <td><a href="/mycars">Manage my cars</a></td>
                 <td>Register, update and de-register cars with us,
-                you can also publish new rides that passengers can sign up for.</td>
+                you can also publish new rides that passengers can sign up for</td>
+            </tr>
+            <tr>
+                <td><a href="/rideadmin">Manage my rides</a></td>
+                <td>Manage or cancel rides that you published</td>
             </tr>
         </tbody>
     </table>
