--- a/views/mycars.ejs
+++ b/views/mycars.ejs
@@ -38,7 +38,7 @@
     <h1>Add a car</h1>
     <form action="/addcar" role="form" method="post">
         <div class="form-group">
-            <label>Plate number (just the numbers for now) <input type="number" min="1" max="9999" class="form-control" name="plate_num" placeholder="1234"></label>
+            <label>Plate number <input type="text" class="form-control" name="plate_num" placeholder="SGH1234X"></label>
         </div>
         <div class="form-group">
             <label>Model (in 7 chars) <input type="text" class="form-control" name="model" placeholder="GTR"></label>
