--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -15,7 +15,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/rides">Find Rides</a>
-                    <a class="dropdown-item" href="#">View Rewards</a>
+                    <a class="dropdown-item" href="/rewards">View Rewards</a>
                 </div>
             </li>
             <li class="nav-item active dropdown">
@@ -26,7 +26,7 @@
                     <a class="dropdown-item" href="/rideadmin">Manage Rides</a>
                     <a class="dropdown-item" href="/mycars">Manage Cars</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">View Benefits</a>
+                    <a class="dropdown-item" href="/benefits">View Benefits</a>
                 </div>
             </li>
             <li class="nav-item">
