rides: show search value

--- a/views/rides.ejs
+++ b/views/rides.ejs
@@ -11,7 +11,7 @@
     <h1>All Rides</h1>
     <form method="get">
         <div class="form-group">
-            <input type="text" class="form-control" name="search" placeholder="Filter by origin/destination">
+            <input type="text" class="form-control" name="search" placeholder="Filter by origin/destination" value="<%= search %>">
         </div>
     </form>
     <p>As with CORS, bidding 0 retracts a bid.</p>
